--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,16 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.3",        
+        "h4cc/wkhtmltopdf-amd64": "0.12.4",
+        "laracasts/flash": "^3.0",       
+        "laravel/helpers": "^1.1",
+        "laravelcollective/html": "^6.0",
+        "league/csv": "^9.6",
+        "league/flysystem": "^1.1",
+        "datatables.net/editor-php": "^1.9",
+        "datatables/datatables": "^1.10"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -21,6 +30,12 @@
         "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
+        "classmap": [
+            "app/Models"
+        ],
+        "files": [
+            "app/Http/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
